Fix #107185: Set position node skips setting rest positions

Now attributes can use the same arrays, checking their data pointers
isn't enough to tell them apart. After e45ed69349af24ba6786, the rest
position attribute is created sharing the same array as positions,
which meant the optimization to skip reading the position input to
the set position node failed. Fix that by checking if the field is the
position attribute instead.